Added filtering when using TSR. Now we can analyze coefficients and recpmstructed thermal decay at the same time.

--- a/General_notebook.ipynb
+++ b/General_notebook.ipynb
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ff29dd07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_tsr=operator.TSR(data)"
+    "result_tsr,_=operator.TSR(data)"
    ]
   },
   {
